# Irage_Assesment

./: .gitignore  CMakeLists.txt  README.md
samples/: lob_replay_visualizer.html  market_data_spot_BTCUSDT_2025-06-15.csv  market_data_spot_BTCUSDT_2025-06-15_orderbook.csv  market_data_spot_BTCUSDT_2026-07-08.csv  market_data_spot_BTCUSDT_2026-07-08_orderbook.csv
src/: binance_parser.cpp  binance_parser.h  book_pipeline.cpp  book_pipeline.h  config.cpp  config.h  csv_writer.cpp  csv_writer.h  main.cpp  market_data_writer.cpp  market_data_writer.h  metrics.h  order_book.cpp  order_book.h  replay_engine.cpp  replay_engine.h  utils.cpp  utils.h  websocket_client.cpp  websocket_client.h
tests/: sim_live.cpp  unit_tests.cpp
